# gg_manager

./: .cursorrules  .gitignore  FULL_CAPABILITIES_REPORT.md  IMPLEMENTATION_REPORT.md  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci.yml
apps/admin/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.mts
apps/admin/electron/: main.mjs
apps/admin/scripts/: ensure-win-codesign-cache.mjs
apps/admin/src/: AccountPicker.tsx  App.tsx  index.css  main.tsx
apps/admin/src/auth/: AuthContext.ts  AuthProvider.tsx  Login.tsx  api.ts
apps/admin/src/billing/: Cashier.tsx  Tariffs.tsx  billingApi.ts
apps/client/: index.html  package.json
apps/client/scripts/: install-watchdog.ps1  uninstall-watchdog.ps1
apps/client/src/: App.tsx  index.css  main.tsx
apps/client/src-tauri/: Cargo.toml  tauri.conf.json
apps/client/src-tauri/src/: lan_sync.rs  main.rs  security.rs  usb.rs  watchdog.rs  window_ctl.rs
apps/client/src-watchdog/: Cargo.toml
apps/client/src-watchdog/src/: main.rs
apps/client/src/api/: kioskSession.ts
apps/client/src/context/: KioskSessionContext.tsx
apps/client/src/lib/: kioskStorage.ts  windowLabel.ts
apps/client/src/windows/: LoginWindow.tsx  OverlayWindow.tsx
apps/server/: .env.example  package-lock.json  package.json  tsconfig.json
apps/server/prisma/: schema.prisma
apps/server/scripts/: ws-smoke-test.js
apps/server/src/: app.module.ts  env.ts  health.controller.ts  main.ts
apps/server/test/: admin-ws.e2e.spec.ts  billing.service.spec.ts  pricing.engine.spec.ts
(+42 files in other folders)
